--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         submodules: recursive
         repository: danielga/garrysmod_common
-        ref: x86-64-support-sourcesdk
+        ref: master
         path: 'garrysmod_common'
     - name: Install Premake
       run: |
@@ -50,7 +50,7 @@ jobs:
         submodules: recursive
         repository: danielga/garrysmod_common
         path: 'garrysmod_common'
-        ref: x86-64-support-sourcesdk
+        ref: master
     - name: Install Premake
       run: |
          curl -L https://github.com/premake/premake-core/releases/download/v5.0.0-beta2/premake-5.0.0-beta2-windows.zip -o premake.zip
