--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -32,15 +32,11 @@ jobs:
       run: |
         cd projects/linux/gmake
         make
-        make config=releasewithsymbols_x86_64
+        make config=release_x86
     - uses: actions/upload-artifact@v4
       with:
         name: gmsv_eightbit_linux.dll
-        path: projects/linux/gmake/x86/ReleaseWithSymbols/gmsv_eightbit_linux.dll
-    - uses: actions/upload-artifact@v4
-      with:
-        name: gmsv_eightbit_linux64.dll
-        path: projects/linux/gmake/x86_64/ReleaseWithSymbols/gmsv_eightbit_linux64.dll
+        path: projects/linux/gmake/x86/Release/gmsv_eightbit_linux.dll
   build-windows:
     runs-on: windows-2019
     steps:
@@ -61,17 +57,8 @@ jobs:
     - name: Build
       run: |
         cd projects/windows/vs2019
-        & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\msbuild.exe" /p:Configuration=ReleaseWithSymbols /p:Platform=Win32 eightbit.sln
+        & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\msbuild.exe" /p:Configuration=Release /p:Platform=Win32 eightbit.sln
     - uses: actions/upload-artifact@v4
       with:
         name: gmsv_eightbit_windows.dll
         path: projects/windows/vs2019/x86/ReleaseWithSymbols/gmsv_eightbit_win32.dll
-    - name: Build 64
-      run: |
-        cd projects/windows/vs2019
-        & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\msbuild.exe" /p:Configuration=ReleaseWithSymbols /p:Platform=x64 eightbit.sln
-    - uses: actions/upload-artifact@v4
-      with:
-        name: gmsv_eightbit_win64.dll
-        path: projects/windows/vs2019/x86_64/ReleaseWithSymbols/gmsv_eightbit_win64.dll
-
